Ajout d'une classe pour masquer des trucs

--- a/app/webroot/css/style.css
+++ b/app/webroot/css/style.css
@@ -66,6 +66,10 @@ img{
 	height:auto;
 }
 
+.hidden{
+	display: none;
+}
+
 /* //////////////////////////// DEBUT /////////////////////////////////// */
 
 #content{
